Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti81:9.3": "il Samādhi non vacilla ",
   "iti81:9.4": "per chi vive solerte. ",
   "iti81:10.1": "Un praticante del Jhāna, scrupoloso, ",
-  "iti81:10.2": "che discerne con visione sottile /// ha acume della visione sottile [EDIT: FIND THE RIGHT WORD CHOICE dal sottile acume e dalla corretta visione,] ",
+  "iti81:10.2": "che discerne con visione raffinata /// ha acume della visione sottile [EDIT: FIND THE RIGHT WORD CHOICE dal sottile acume e dalla corretta visione,] ",
   "iti81:10.3": "è felice di smettere di alimentare il fuoco ",
   "iti81:10.4": "e viene chiamata una buona persona. "
 }
