--- a/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti81_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti81:9.2": "disonorato, o entrambi, ",
   "iti81:9.3": "il Samādhi non vacilla ",
   "iti81:9.4": "per chi vive solerte. ",
-  "iti81:10.1": "Un praticante del Jhāna, scrupoloso, ",
+  "iti81:10.1": "Un praticante del Jhāna, assiduo, ",
   "iti81:10.2": "che discerne con raffinata visione [/// ha acume della visione sottile // dal sottile acume e dalla corretta visione,] ",
   "iti81:10.3": "è felice di smettere di alimentare il fuoco ",
   "iti81:10.4": "e viene chiamata una buona persona. "
