--- a/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti82:2.1": "“Cercatori, tre ovazioni si levano tra i Deva in delle occasioni precise. ",
   "iti82:2.2": "Quali tre? ",
-  "iti82:2.3": "Quando un discepolo dei nobili si taglia barba e capelli, indossa le vesti color ocra e vuole rinunciare al mondo lasciando il focolare domestico per vivere senza dimora, in quell’occasione si leva un’ovazione tra i Deva: ",
+  "iti82:2.3": "Quando un discepolo dei nobili si taglia barba e capelli, indossa le vesti color ocra e decide di rinunciare al mondo lasciando il focolare domestico per vivere senza dimora, in quell’occasione si leva un’ovazione tra i Deva: ",
   "iti82:2.4": "‘Questo discepolo dei nobili vuole andare in guerra contro Māra.’ ",
   "iti82:3.1": "E poi, quando discepolo dei nobili vive devoto alla coltivazione del cuore secondo sette qualità che portano all’illuminazione, in quell’occasione si leva un’ovazione tra i Deva: ",
   "iti82:3.2": "‘Questo discepolo dei nobili combatte contro Māra, contro la morte.’ ",
