--- a/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
@@ -17,6 +17,6 @@
   "iti82:6.4": "non hai più ostacoli nella liberazione.’ ",
   "iti82:7.1": "Così i Deva rendono omaggio ",
   "iti82:7.2": "a chi ha raggiunto il traguardo ",
-  "iti82:7.3": "non vedendo ",
+  "iti82:7.3": "non vedendo alcunché per cui ",
   "iti82:7.4": "questi potrà cadere di nuovo sotto il potere della morte. "
 }
