Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn23_translation-de-sabbamitta.json
@@ -216,7 +216,7 @@
   "dn23:13.4": "Die eine hatte einen Sohn von zehn oder zwölf Jahren, die andere war schwanger und stand kurz vor der Niederkunft. ",
   "dn23:13.5": "Da starb der Brahmane. ",
   "dn23:13.6": "Und der Junge sagte zur Nebenfrau seiner Mutter: ",
-  "dn23:13.7": "‚Meine Dame, alles Vermögen, Getreide, Silber und Gold gehören mir, ",
+  "dn23:13.7": "‚Meine Dame, alles Geld, Getreide, Silber und Gold gehören mir, ",
   "dn23:13.8": "und du bekommst nichts. ",
   "dn23:13.9": "Übergib mir das Erbe meines Vaters.‘ ",
   "dn23:13.10": "Darauf sagte die Brahmanin: ",
