--- a/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn31_translation-de-sabbamitta.json
@@ -100,7 +100,7 @@
   "dn31:14.19": "mit den Schlechteren verbinden sie sich, nicht den Besseren: ",
   "dn31:14.20": "Sie schwinden dahin wie der abnehmende Mond. ",
   "dn31:14.21": "Einer, durch Palmwein mittellos, abgebrannt, ",
-  "dn31:14.22": "durstig, trinkt in der Schenke ",
+  "dn31:14.22": "durstig, der in der Schenke trinkt ",
   "dn31:14.23": "und ertrinkt in Schulden, ",
   "dn31:14.24": "wird schnell vom Weg abkommen. ",
   "dn31:14.25": "Wenn man gewohnt ist, lange zu schlafen, ",
