--- a/translation/de/sabbamitta/sutta/kn/cp/cp20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/cp/cp20_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "cp20:4.1": "Als Leute aus dem Bhoja-Volk mich sahen, ",
   "cp20:4.2": "diese gewalttätigen und mitleidlosen Jäger, ",
   "cp20:4.3": "kamen sie dort zu mir ",
-  "cp20:4.4": "mit Knütteln und Stöcken in den Händen. ",
+  "cp20:4.4": "mit Knütteln und Hämmern in den Händen. ",
   "cp20:5.1": "Nachdem sie mir Nase, ",
   "cp20:5.2": "Schwanz und Rückgrat durchbohrt ",
   "cp20:5.3": "und mich an eine Stange gebunden hatten, ",
