Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/cp/cp29_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/cp/cp29_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/cp/cp29_translation-de-sabbamitta.json
@@ -42,7 +42,7 @@
   "cp29:10.1": "‚Ich habe Flügel, die nicht fliegen! ",
   "cp29:10.2": "Ich habe Füße, die nicht gehen! ",
   "cp29:10.3": "Mutter und Vater sind weggegangen! ",
-  "cp29:10.4": "Feuer: Weiche zurück!‘ ",
+  "cp29:10.4": "Feuer Jātaveda: Weiche zurück!‘ ",
   "cp29:11.1": "Als ich diese Wahrheit erklärte, ",
   "cp29:11.2": "zogen sich die hohen Flammenkronen ",
   "cp29:11.3": "sechzehn Meilen zurück, ",
