Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/cp/cp32_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/cp/cp32_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/cp/cp32_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "cp32:4.4": "und entsagte dann dem Königtum. ",
   "cp32:5.1": "Ich besann mich auf den wahren Dhamma, ",
   "cp32:5.2": "wie er von früheren Siegern gehegt wurde, ",
-  "cp32:5.3": "gab mein Vermögen dem Brahmanen ",
+  "cp32:5.3": "gab mein Geld dem Brahmanen ",
   "cp32:5.4": "und kehrte zum Menschenfresser zurück. ",
   "cp32:6.1": "Ich zweifelte nicht daran, ",
   "cp32:6.2": "dass er mich töten würde. ",
