Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/ud/vagga4/ud4.2_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "ud4.2:4.3": "von Dumpfheit und Benommenheit überwältigt, ",
   "ud4.2:4.4": "so gerät man in Māras Bann. ",
   "ud4.2:5.1": "Daher soll man den Geist behüten ",
-  "ud4.2:5.2": "mit rechtem Denken als Weidegrund ",
+  "ud4.2:5.2": "mit rechtem Denken als Lebensraum ",
   "ud4.2:5.3": "und rechter Ansicht vorangestellt. ",
   "ud4.2:5.4": "Wenn er Entstehen und Vergehen versteht, ",
   "ud4.2:5.5": "schüttelt ein Mönch, der Dumpfheit und Benommenheit überwunden hat, ",
