Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thag/thag6.5_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thag/thag6.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag6.5_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "thag6.5:1.1": "Wenn ein Mensch nachlässig lebt, ",
   "thag6.5:1.2": "wächst Verlangen in ihm wie eine Kamelhufliane. ",
   "thag6.5:1.3": "Er springt von Leben zu Leben ",
-  "thag6.5:1.4": "wie ein Affe, der im Wald eine Frucht will. ",
+  "thag6.5:1.4": "wie eine Meerkatze, die im Wald eine Frucht will. ",
   "thag6.5:2.1": "Jeder, über den dieses erbärmliche Verlangen die Oberhand hat, ",
   "thag6.5:2.2": "dieses Sich-Klammern an die Welt, ",
   "thag6.5:2.3": "dessen Kummer wächst ",
