Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thag/thag6.14_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thag/thag6.14_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag6.14_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "thag6.14:1.4": "und er wird doch so umsorgt! ",
   "thag6.14:2.1": "Wie ein scheues Wild in einer Falle, ",
   "thag6.14:2.2": "wie einen Fisch an einem Haken, ",
-  "thag6.14:2.3": "wie einen Affen mit Teer – ",
+  "thag6.14:2.3": "wie eine Meerkatze mit Teer – ",
   "thag6.14:2.4": "so fangen sie einen gewöhnlichen Menschen. ",
   "thag6.14:3.1": "Bilder, Töne, Gerüche, Geschmäcke ",
   "thag6.14:3.2": "und so entzückende Berührungen: ",
