Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/dhp/dhp334-359_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp334-359_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp334-359_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "dhp334:1": "Wenn ein Mensch nachlässig lebt, ",
   "dhp334:2": "wächst Verlangen in ihm wie eine Kamelhufliane. ",
   "dhp334:3": "Er springt von Leben zu Leben ",
-  "dhp334:4": "wie ein Affe, der im Wald eine Frucht will. ",
+  "dhp334:4": "wie eine Meerkatze, die im Wald eine Frucht will. ",
   "dhp335:1": "Jeder, über den dieses erbärmliche Verlangen die Oberhand hat, ",
   "dhp335:2": "dieses Sich-Klammern an die Welt, ",
   "dhp335:3": "dessen Kummer wächst ",
