Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/iti/vagga11/iti101_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/iti/vagga11/iti101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga11/iti101_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "iti101:2.10": "Dazu wird gesagt: ",
   "iti101:3.1": "„Zufrieden mit dem, was ohne Tadel ist, ",
   "iti101:3.2": "einfach und leicht zu bekommen, ",
-  "iti101:3.3": "ist man nicht aufgebracht ",
+  "iti101:3.3": "quält man sich nicht ",
   "iti101:3.4": "wegen einer Unterkunft, wegen Roben, ",
   "iti101:3.5": "wegen Essen und Trinken ",
   "iti101:3.6": "und ist in keiner Richtung behindert. ",
