Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn7/sn7.12_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn7/sn7.12_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn7/sn7.12_translation-de-sabbamitta.json
@@ -20,7 +20,7 @@
   "sn7.12:4.2": "wieder und wieder geht das Kalb zu seiner Mutter; ",
   "sn7.12:4.3": "wieder und wieder unterdrückt er und schüchtert ein: ",
   "sn7.12:4.4": "Dieser Dummkopf geht wieder und wieder zum Mutterleib. ",
-  "sn7.12:5.1": "Wieder und wieder wirst du wiedergeboren und stirbst; ",
+  "sn7.12:5.1": "Wieder und wieder wird man wiedergeboren und stirbt; ",
   "sn7.12:5.2": "wieder und wieder wirst du zum Leichenfeld getragen. ",
   "sn7.12:5.3": "Doch wenn er den Pfad zu keiner weiteren Wiedergeburt gewonnen hat, ",
   "sn7.12:5.4": "wird einer von ausgedehnter Weisheit nicht wieder und wieder geboren.“ ",
