Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -1,4 +1,5 @@
 {
   "thig6.6:0.1": "Стихи старших монахинь 6.6 ",
-  "thig6.6:0.2": "Шесть строф "
+  "thig6.6:0.2": "Шесть строф ",
+  "thig6.6:0.3": "Махападжапати Готами Тхери "
 }
