--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,6 @@
   "thig6.6:0.2": "Шесть строф ",
   "thig6.6:0.3": "Махападжапати Готами Тхери ",
   "thig6.6:1.1": "О Будда, воздаю я почести тебе, ",
-  "thig6.6:1.2": "Герою, высшему среди существ! "
+  "thig6.6:1.2": "Герою, высшему среди существ! ",
+  "thig6.6:1.3": "Из всех страданий ты вызволил меня, "
 }
