--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -5,5 +5,6 @@
   "thig6.6:1.1": "О Будда, воздаю я почести тебе, ",
   "thig6.6:1.2": "Герою, высшему среди существ! ",
   "thig6.6:1.3": "Из всех страданий ты вызволил меня, ",
-  "thig6.6:1.4": "Как и многих других. "
+  "thig6.6:1.4": "Как и многих других. ",
+  "thig6.6:2.1": "Страданья познаны всецело, "
 }
