Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -9,5 +9,6 @@
   "thig6.6:2.1": "Страданья познаны всецело, ",
   "thig6.6:2.2": "И корень жажды вырван. ",
   "thig6.6:2.3": "Взращён был Восьмеричный путь, ",
-  "thig6.6:2.4": "И прекращения коснулась я. "
+  "thig6.6:2.4": "И прекращения коснулась я. ",
+  "thig6.6:3.1": "Была я матерью, сыном, отцом, братом, "
 }
