--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,6 @@
   "thig6.6:2.3": "Взращён был Восьмеричный путь, ",
   "thig6.6:2.4": "И прекращения коснулась я. ",
   "thig6.6:3.1": "Была я матерью, сыном, отцом, братом, ",
-  "thig6.6:3.2": "Дедом в прошлом своём. "
+  "thig6.6:3.2": "Дедом в прошлом своём. ",
+  "thig6.6:3.3": "Скиталась, утешения не обретая, "
 }
