--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig6.6:3.1": "Была я матерью, сыном, отцом, братом, ",
   "thig6.6:3.2": "Дедом в прошлом своём. ",
   "thig6.6:3.3": "Скиталась, утешения не обретая, ",
-  "thig6.6:3.4": "Явлений как есть они не постигая. "
+  "thig6.6:3.4": "Явлений как есть они не постигая. ",
+  "thig6.6:4.1": "Узрела Благословенного, "
 }
