Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig6.6:3.2": "Дедом в прошлом своём. ",
   "thig6.6:3.3": "Скиталась, утешения не обретая, ",
   "thig6.6:3.4": "Явлений как есть они не постигая. ",
-  "thig6.6:4.1": "Узрела Благословенного, "
+  "thig6.6:4.1": "Узрела Благословенного, ",
+  "thig6.6:4.2": "Это моё тело — последнее; "
 }
