Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig6.6:3.3": "Скиталась, утешения не обретая, ",
   "thig6.6:3.4": "Явлений как есть они не постигая. ",
   "thig6.6:4.1": "Узрела Благословенного, ",
-  "thig6.6:4.2": "Это моё тело — последнее; "
+  "thig6.6:4.2": "Это моё тело — последнее; ",
+  "thig6.6:4.3": "Завершено сансарное блужданье, "
 }
