--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig6.6:3.4": "Явлений как есть они не постигая. ",
   "thig6.6:4.1": "Узрела Благословенного, ",
   "thig6.6:4.2": "Это моё тело — последнее; ",
-  "thig6.6:4.3": "Завершено сансарное блужданье, "
+  "thig6.6:4.3": "Завершено сансарное блужданье, ",
+  "thig6.6:4.4": "И больше нет рожденья для меня. "
 }
