Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -17,5 +17,6 @@
   "thig6.6:4.1": "Узрела Благословенного, ",
   "thig6.6:4.2": "Это моё тело — последнее; ",
   "thig6.6:4.3": "Завершено сансарное блужданье, ",
-  "thig6.6:4.4": "И больше нет рожденья для меня. "
+  "thig6.6:4.4": "И больше нет рожденья для меня. ",
+  "thig6.6:5.1": "Благоразумные, неутомимые, "
 }
