Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.6:4.4": "И больше нет рожденья для меня. ",
   "thig6.6:5.1": "Благоразумные, неутомимые, ",
   "thig6.6:5.2": "С твёрдым устремленьем к цели —",
-  "thig6.6:5.3": "Этим славные последователи "
+  "thig6.6:5.3": "Этим славные последователи ",
+  "thig6.6:5.4": "Воздают почтенье Будде. "
 }
