--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.6_translation-ru-narinyanievmenenko.json
@@ -23,5 +23,6 @@
   "thig6.6:5.3": "Этим славные последователи ",
   "thig6.6:5.4": "Воздают почтенье Будде. ",
   "thig6.6:6.1": "Поистине во благо многих ",
-  "thig6.6:6.2": "Майя родила Готаму. "
+  "thig6.6:6.2": "Майя родила Готаму. ",
+  "thig6.6:6.3": "Подверженные гибели и хвори существа "
 }
