--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -1,3 +1,4 @@
 {
-  "thig6.7:0.1": "Стихи старших монахинь 6.7 "
+  "thig6.7:0.1": "Стихи старших монахинь 6.7 ",
+  "thig6.7:0.2": "Шесть строф "
 }
