Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -1,5 +1,6 @@
 {
   "thig6.7:0.1": "Стихи старших монахинь 6.7 ",
   "thig6.7:0.2": "Шесть строф ",
-  "thig6.7:0.3": "Гутта Тхери "
+  "thig6.7:0.3": "Гутта Тхери ",
+  "thig6.7:1.1": "В скитания, Гутта, ты ушла, "
 }
