--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -5,5 +5,6 @@
   "thig6.7:1.1": "В скитания, Гутта, ты ушла, ",
   "thig6.7:1.2": "Отринув сына и любимых. ",
   "thig6.7:1.3": "Так пестуй устремление своё, ",
-  "thig6.7:1.4": "Не поддавайся своему уму. "
+  "thig6.7:1.4": "Не поддавайся своему уму. ",
+  "thig6.7:2.1": "Умом влекомые повсюду, "
 }
