--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -7,5 +7,6 @@
   "thig6.7:1.3": "Так пестуй устремление своё, ",
   "thig6.7:1.4": "Не поддавайся своему уму. ",
   "thig6.7:2.1": "Умом влекомые повсюду, ",
-  "thig6.7:2.2": "Радуются существа владеньям Мары; "
+  "thig6.7:2.2": "Радуются существа владеньям Мары; ",
+  "thig6.7:2.3": "Блуждают по сансаре, "
 }
