Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,6 @@
   "thig6.7:2.3": "Блуждают по сансаре, ",
   "thig6.7:2.4": "Не ведая, не видя. ",
   "thig6.7:3.1": "Желания чувственные, враждебность, ",
-  "thig6.7:3.2": "Вера в личность, "
+  "thig6.7:3.2": "Вера в личность, ",
+  "thig6.7:3.3": "Тяга к ритуалам, "
 }
