--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig6.7:3.1": "Желания чувственные, враждебность, ",
   "thig6.7:3.2": "Вера в личность, ",
   "thig6.7:3.3": "Тяга к ритуалам, ",
-  "thig6.7:3.4": "И пятое — сомненья. "
+  "thig6.7:3.4": "И пятое — сомненья. ",
+  "thig6.7:4.1": "О бхиккхуни, "
 }
