Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig6.7:3.4": "И пятое — сомненья. ",
   "thig6.7:4.1": "О бхиккхуни, ",
   "thig6.7:4.2": "Отринь те низшие оковы —",
-  "thig6.7:4.3": "И больше не вернёшься в этот мир. "
+  "thig6.7:4.3": "И больше не вернёшься в этот мир. ",
+  "thig6.7:5.1": "А если ты отринешь вожделенье, "
 }
