Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -17,5 +17,6 @@
   "thig6.7:4.1": "О бхиккхуни, ",
   "thig6.7:4.2": "Отринь те низшие оковы —",
   "thig6.7:4.3": "И больше не вернёшься в этот мир. ",
-  "thig6.7:5.1": "А если ты отринешь вожделенье, "
+  "thig6.7:5.1": "А если ты отринешь вожделенье, ",
+  "thig6.7:5.2": "Неведение и самомненье, "
 }
