--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.7:5.1": "А если ты отринешь вожделенье, ",
   "thig6.7:5.2": "Неведение и самомненье, ",
   "thig6.7:5.3": "Неугомонность, ",
-  "thig6.7:5.4": "То все страданья подойдут к концу. "
+  "thig6.7:5.4": "То все страданья подойдут к концу. ",
+  "thig6.7:6.1": "Преодолев рождения в сансаре "
 }
