Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -21,5 +21,6 @@
   "thig6.7:5.2": "Неведение и самомненье, ",
   "thig6.7:5.3": "Неугомонность, ",
   "thig6.7:5.4": "То все страданья подойдут к концу. ",
-  "thig6.7:6.1": "Преодолев рождения в сансаре "
+  "thig6.7:6.1": "Преодолев рождения в сансаре ",
+  "thig6.7:6.2": "И полностью будущие рождения познав, "
 }
