Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.7_translation-ru-narinyanievmenenko.json
@@ -23,5 +23,6 @@
   "thig6.7:5.4": "То все страданья подойдут к концу. ",
   "thig6.7:6.1": "Преодолев рождения в сансаре ",
   "thig6.7:6.2": "И полностью будущие рождения познав, ",
-  "thig6.7:6.3": "Ты в этой самой жизни утолишь свой голод, "
+  "thig6.7:6.3": "Ты в этой самой жизни утолишь свой голод, ",
+  "thig6.7:6.4": "И навсегда покой ты обретешь. "
 }
