--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,6 @@
   "thig6.8:0.2": "Шесть строф ",
   "thig6.8:0.3": "Виджая Тхери ",
   "thig6.8:1.1": "Четыре или пять раз я покидала монастырь, ",
-  "thig6.8:1.3": "Не в силах обрести покой, "
+  "thig6.8:1.3": "Не в силах обрести покой, ",
+  "thig6.8:1.4": "Не в силах совладать с умом; "
 }
