--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -6,5 +6,6 @@
   "thig6.8:1.3": "Не в силах обрести покой, ",
   "thig6.8:1.4": "Не в силах совладать с умом; ",
   "thig6.8:2.1": "И я отправилась к бхиккхуни, ",
-  "thig6.8:2.2": "С почтением к ней обратилась. "
+  "thig6.8:2.2": "С почтением к ней обратилась. ",
+  "thig6.8:2.3": "Она меня учила Дхамме —"
 }
