--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -8,5 +8,6 @@
   "thig6.8:2.1": "И я отправилась к бхиккхуни, ",
   "thig6.8:2.2": "С почтением к ней обратилась. ",
   "thig6.8:2.3": "Она меня учила Дхамме —",
-  "thig6.8:2.4": "Совокупностям, стихиям, "
+  "thig6.8:2.4": "Совокупностям, стихиям, ",
+  "thig6.8:3.1": "Четырём благородным истинам, "
 }
