Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,6 @@
   "thig6.8:2.4": "Совокупностям, стихиям, ",
   "thig6.8:3.1": "Четырём благородным истинам, ",
   "thig6.8:3.2": "Духовным способностям и силам, ",
-  "thig6.8:3.3": "Пути и звеньям Пробуждения, "
+  "thig6.8:3.3": "Пути и звеньям Пробуждения, ",
+  "thig6.8:3.4": "Чтобы высшего предназначения достичь. "
 }
