Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig6.8:3.2": "Духовным способностям и силам, ",
   "thig6.8:3.3": "Пути и звеньям Пробуждения, ",
   "thig6.8:3.4": "Чтобы высшего предназначения достичь. ",
-  "thig6.8:4.1": "Её слова услышав, "
+  "thig6.8:4.1": "Её слова услышав, ",
+  "thig6.8:4.2": "Следовала им. "
 }
