--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig6.8:3.3": "Пути и звеньям Пробуждения, ",
   "thig6.8:3.4": "Чтобы высшего предназначения достичь. ",
   "thig6.8:4.1": "Её слова услышав, ",
-  "thig6.8:4.2": "Следовала им. "
+  "thig6.8:4.2": "Следовала им. ",
+  "thig6.8:4.3": "В первой части ночи "
 }
