Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig6.8:4.1": "Её слова услышав, ",
   "thig6.8:4.2": "Следовала им. ",
   "thig6.8:4.3": "В первой части ночи ",
-  "thig6.8:4.4": "Вспомнила прошлые обители свои. "
+  "thig6.8:4.4": "Вспомнила прошлые обители свои. ",
+  "thig6.8:5.1": "А во второй обрела божественное око, "
 }
