--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -18,5 +18,6 @@
   "thig6.8:4.3": "В первой части ночи ",
   "thig6.8:4.4": "Вспомнила прошлые обители свои. ",
   "thig6.8:5.1": "А во второй обрела божественное око, ",
-  "thig6.8:5.2": ""
+  "thig6.8:5.2": "",
+  "thig6.8:5.3": "Всю тьму рассеяла "
 }
