--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig6.8:5.1": "А во второй обрела божественное око, ",
   "thig6.8:5.2": "",
   "thig6.8:5.3": "Всю тьму рассеяла ",
-  "thig6.8:5.4": "В последней части ночи. "
+  "thig6.8:5.4": "В последней части ночи. ",
+  "thig6.8:6.1": "Купаясь в счастье и блаженстве, "
 }
