Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.8_translation-ru-narinyanievmenenko.json
@@ -23,5 +23,6 @@
   "thig6.8:5.4": "В последней части ночи. ",
   "thig6.8:6.1": "Купаясь в счастье и блаженстве, ",
   "thig6.8:6.2": "Пребывала так я. ",
-  "thig6.8:6.3": "А на седьмой день распрямила ноги, "
+  "thig6.8:6.3": "А на седьмой день распрямила ноги, ",
+  "thig6.8:6.4": "Пучину тьмы рассеяв всю. "
 }
