--- a/translation/de/sabbamitta/sutta/kn/thag/thag17.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag17.1_translation-de-sabbamitta.json
@@ -36,7 +36,7 @@
   "thag17.1:8.3": "werden sie schwach ",
   "thag17.1:8.4": "beim Durchführen von Saṅghaverfahren. ",
   "thag17.1:9.1": "In der Zukunft werden Dummköpfe ",
-  "thag17.1:9.2": "Geld, Gold und Silber annehmen, ",
+  "thag17.1:9.2": "Zahlungsmittel und Gold annehmen, ",
   "thag17.1:9.3": "Felder und Grundstücke, Ziegen und Schafe ",
   "thag17.1:9.4": "und abhängige Diener und Dienerinnen. ",
   "thag17.1:10.1": "Toren, die bei anderen Fehler suchen, ",
