--- a/translation/de/sabbamitta/sutta/kn/thag/thag1.101_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag1.101_translation-de-sabbamitta.json
@@ -6,5 +6,5 @@
   "thag1.101:1.1": "Er hat das Hausleben aufgegeben, aber er hat kein Ziel. ",
   "thag1.101:1.2": "Er lebt für seinen Bauch, faul, benutzt seine Schnauze als Pflug, ",
   "thag1.101:1.3": "wie ein fettes, mit Korn gemästetes Schwein. ",
-  "thag1.101:1.4": "Dieser Dummkopf wird wieder und wieder geboren. "
+  "thag1.101:1.4": "Dieser Narr wird wieder und wieder geboren. "
 }
