--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "thig13.5:2.4": "und sehnte mich nach Entsagung. ",
   "thig13.5:3.1": "Meinen Familienkreis gab ich auf, ",
   "thig13.5:3.2": "abhängige Diener und Arbeiter ",
-  "thig13.5:3.3": "und die blühenden Dörfer und Felder, ",
+  "thig13.5:3.3": "und die blühenden Dorffelder, ",
   "thig13.5:3.4": "so entzückend und schön, ",
   "thig13.5:4.1": "und zog fort; ",
   "thig13.5:4.2": "kein geringes Vermögen war das. ",
