--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
@@ -95,7 +95,7 @@
   "thig13.5:23.3": "will ich nicht wieder auf sie zurückfallen, ",
   "thig13.5:23.4": "sondern mich stets am Erlöschen freuen. ",
   "thig13.5:24.1": "Einst habe ich um Sinnenfreuden gekämpft, ",
-  "thig13.5:24.2": "und sehne mich nach dem kühlen Zustand – ",
+  "thig13.5:24.2": "jetzt sehne ich mich nach dem kühlen Zustand – ",
   "thig13.5:24.3": "so werde ich beflissen meditieren, ",
   "thig13.5:24.4": "um alle Fesseln aufzulösen. ",
   "thig13.5:25.1": "Ohne Kummer, unbefleckt, sicher: ",
