--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
@@ -96,7 +96,7 @@
   "thig13.5:23.4": "sondern mich stets am Erlöschen freuen. ",
   "thig13.5:24.1": "Einst habe ich um Sinnenfreuden gekämpft, ",
   "thig13.5:24.2": "jetzt sehne ich mich nach dem kühlen Zustand. ",
-  "thig13.5:24.3": "so werde ich beflissen meditieren, ",
+  "thig13.5:24.3": "Ich werde beflissen meditieren, ",
   "thig13.5:24.4": "um alle Fesseln aufzulösen. ",
   "thig13.5:25.1": "Ohne Kummer, unbefleckt, sicher: ",
   "thig13.5:25.2": "Diesem Pfad will ich folgen, ",
