--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.5_translation-de-sabbamitta.json
@@ -99,7 +99,7 @@
   "thig13.5:24.3": "Ich werde beflissen meditieren, ",
   "thig13.5:24.4": "um alle Fesseln aufzulösen. ",
   "thig13.5:25.1": "Ohne Kummer, unbefleckt, sicher: ",
-  "thig13.5:25.2": "Diesem Pfad will ich folgen, ",
+  "thig13.5:25.2": "Diesem Pfad folge ich, ",
   "thig13.5:25.3": "dem geraden edlen achtfachen Pfad, ",
   "thig13.5:25.4": "über den die Seher hinübergelangt sind.“ ",
   "thig13.5:26.1": "„Sieh dir das an: Subhā, die Tochter des Schmieds, ",
