Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn36_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn36_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn36_translation-de-sabbamitta.json
@@ -248,7 +248,7 @@
   "mn36:27.7": "‚Wenn ich behaupte, das Essen vollständig einzustellen, und diese Gottheiten flößen himmlischen Nektar in meine Poren ein, so wäre das von meiner Seite eine Lüge.‘ ",
   "mn36:27.8": "Daher entließ ich diese Gottheiten mit den Worten: ‚Es ist nicht nötig.‘ ",
   "mn36:28.1": "Da dachte ich: ",
-  "mn36:28.2": "‚Warum nehme ich nicht jedes Mal ein klein wenig Nahrung zu mir, einen Becher Mungobohnen-, Pferdebohnen-, Kichererbsen- oder grüne Bohnenbrühe?‘ ",
+  "mn36:28.2": "‚Warum nehme ich nicht jedes Mal ein klein wenig Nahrung zu mir, ein Händchen voll Mungobohnen-, Pferdebohnen-, Kichererbsen- oder grüne Bohnenbrühe?‘ ",
   "mn36:28.3": "Und ich nahm jedes Mal ein klein wenig Nahrung zu mir, ",
   "mn36:28.4": "bis mein Körper aufs Äußerste ausgemergelt wurde. ",
   "mn36:28.5": "Da ich so wenig aß, wurden meine Haupt- und Nebenglieder wie die Gelenke eines Achtzigjährigen oder eines Sterbenden, ",
