--- a/translation/de/sabbamitta/sutta/mn/mn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn5_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "mn5:4.1": "„Geehrter, nehmen wir den Fall des Menschen, der einen Makel hat und das nicht wahrhaftig versteht. Man kann erwarten, dass er keinen Enthusiasmus entwickeln, sich nicht einsetzen und seine Energie nicht aufrütteln wird, um diesen Makel aufzugeben. ",
   "mn5:4.2": "Und er wird mit Gier, Hass und Täuschung sterben, mit einem Makel, mit verunreinigtem Geist. ",
   "mn5:4.3": "Wie ein bronzener Kelch, der staubig und fleckig aus einem Laden oder einer Schmiede gebracht würde, ",
-  "mn5:4.4": "und die Besitzer würden sie weder benutzen noch säubern, sondern bewahrten sie an einem schmutzigen Ort auf: ",
+  "mn5:4.4": "und die Besitzer würden ihn weder benutzen noch säubern, sondern bewahrten ihn an einem schmutzigen Ort auf: ",
   "mn5:4.5": "Würde diese Bronzeschüssel nicht mit der Zeit noch staubiger und fleckiger werden?“ ",
   "mn5:4.6": "„Ja, Geehrter.“ ",
   "mn5:4.7": "„Ebenso ist es im Fall des Menschen, der einen Makel hat und das nicht wahrhaftig versteht. Man kann erwarten, dass er keinen Enthusiasmus entwickeln, sich nicht einsetzen und seine Energie nicht aufrütteln wird, um diesen Makel aufzugeben, ",
