--- a/translation/de/sabbamitta/sutta/mn/mn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn5_translation-de-sabbamitta.json
@@ -32,7 +32,7 @@
   "mn5:5.2": "Und er wird ohne Gier, Hass und Täuschung sterben, ohne Makel oder verunreinigten Geist. ",
   "mn5:5.3": "Wie ein bronzener Kelch, der staubig und fleckig aus einem Laden oder einer Schmiede gebracht würde, ",
   "mn5:5.4": "aber die Besitzer würden ihn benutzen und säubern und bewahrten ihn nicht an einem schmutzigen Ort auf: ",
-  "mn5:5.5": "Würde diese Bronzeschüssel nicht mit der Zeit sauberer und heller werden?“ ",
+  "mn5:5.5": "Würde dieser bronzene Kelch nicht mit der Zeit sauberer und heller werden?“ ",
   "mn5:5.6": "„Ja, Geehrter.“ ",
   "mn5:5.7": "„Ebenso ist es im Fall des Menschen, der einen Makel hat und das wahrhaftig versteht. Man kann erwarten, dass er Enthusiasmus entwickeln, sich einsetzen und seine Energie aufrütteln wird, um diesen Makel aufzugeben, ",
   "mn5:5.8": "und dass er ohne Gier, Hass und Täuschung sterben wird, ohne Makel oder verunreinigten Geist. ",
