--- a/translation/de/sabbamitta/sutta/mn/mn5_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn5_translation-de-sabbamitta.json
@@ -40,7 +40,7 @@
   "mn5:6.2": "Und er wird mit Gier, Hass und Täuschung sterben, mit einem Makel, mit verunreinigtem Geist. ",
   "mn5:6.3": "Wie ein bronzener Kelch, der sauber und hell aus einem Laden oder einer Schmiede gebracht würde, ",
   "mn5:6.4": "aber die Besitzer würden ihn weder benutzen noch säubern, sondern bewahrten ihn an einem schmutzigen Ort auf: ",
-  "mn5:6.5": "Würde diese Bronzeschüssel nicht mit der Zeit staubiger und fleckiger werden?“ ",
+  "mn5:6.5": "Würde dieser bronzene Kelch nicht mit der Zeit staubiger und fleckiger werden?“ ",
   "mn5:6.6": "„Ja, Geehrter.“ ",
   "mn5:6.7": "„Ebenso ist es im Fall des Menschen, der keinen Makel hat und das nicht wahrhaftig versteht. Man kann erwarten, dass er den Geist auf das Merkmal des Schönen richten und dass deshalb Wollust seinen Geist befallen wird, ",
   "mn5:6.8": "und dass er mit Gier, Hass und Täuschung sterben wird, mit einem Makel, mit verunreinigtem Geist. ",
