--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti89:2.2": "Quali tre? ",
   "iti89:2.3": "Desideri malvagi, ",
   "iti89:2.4": "amici malvagi ",
-  "iti89:2.5": "e il dichiarare di aver raggiunto la perfezione, pur essendo consapevole di avere ancora altro da coltivare visto l’insignificante risultato interno (dentro di se'). ",
+  "iti89:2.5": "interrompendo la pratica prima del dovuto, pur essendoci ancora molto da fare, avendo ottenuto un insignifcante risultato interno. ",
   "iti89:3.1": "Che non appaia mai nessuno in questo mondo ",
   "iti89:3.2": "con dei desideri malvagi. ",
   "iti89:3.3": "Grazie a questo sapete ",
