Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti89:2.5": "e interrompendo la pratica prima del dovuto, pur essendoci ancora molto da fare, dopo aver ottenuto mediocri risultati internamente. ",
   "iti89:3.1": "Che non appaia mai nessuno in questo mondo ",
   "iti89:3.2": "con dei desideri malvagi. ",
-  "iti89:3.3": "Grazie a questo sapete ",
+  "iti89:3.3": "Adesso grazie a questo sapete ",
   "iti89:3.4": "dove uno finirà uno con questi desideri malvagi. ",
   "iti89:4.1": "Un tempo fu chiamato saggio, ",
   "iti89:4.2": "considerato maturo, ",
