--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -26,7 +26,7 @@
   "iti89:7.4": "visto quanto è incredibilmente grande l’oceano. ",
   "iti89:8.1": "Allo stesso modo chiunque attacchi ",
   "iti89:8.2": "con le parole il Buddha ",
-  "iti89:8.3": "dal buon comportamento e dal cuore calmo, ",
+  "iti89:8.3": "che pratica bene e ha il cuore sereno, ",
   "iti89:8.4": "l’offesa non attecchisce. ",
   "iti89:9.1": "Dovrebbe trovarsi un amico spirituale di questo tipo ",
   "iti89:9.2": "il saggio, e andargli dietro passo passo. ",
