Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti89:4.4": "il famoso Devadatta. ",
   "iti89:5.1": "Entrando in competizione con ",
   "iti89:5.2": "il Buddha, lo ha assalito ",
-  "iti89:5.3": "ha raggiunto l’inferno di Avīci ",
+  "iti89:5.3": "e ha raggiunto l’inferno di Avīci ",
   "iti89:5.4": "con i suoi quattro cancelli terrificanti. ",
   "iti89:6.1": "Quando uno reca danno a chi è incorruttibile ed ",
   "iti89:6.2": "incapace di fare del male, ",
