--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -18,7 +18,7 @@
   "iti89:5.4": "con i suoi quattro cancelli terrificanti. ",
   "iti89:6.1": "Quando si reca danno a chi è incorruttibile e ",
   "iti89:6.2": "incapace di fare del male, ",
-  "iti89:6.3": "questo nuoce alla persona che fa del male ",
+  "iti89:6.3": "questo nuoce alla persona che fa del male, ",
   "iti89:6.4": "che ha il cuore corrotto ed è senza rispetto. ",
   "iti89:7.1": "Se uno volesse contaminare l’oceano ",
   "iti89:7.2": "con una brocca piena di veleno ",
