Translations by gnlaera to translation/pt/laera-quaresma/sutta/an/an4/an4.188_translation-pt-laera-quaresma.json

--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.188_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.188_translation-pt-laera-quaresma.json
@@ -23,7 +23,7 @@
   "an4.188:4.4": "Eu declarei: ‘Os habilidosos devem ser desenvolvidos’.",
   "an4.188:4.5": "E há um número ilimitado de palavras, frases e ensinamentos do Realizado sobre isso:",
   "an4.188:4.6": "É uma outra forma de dizer que se deve desenvolver o que é hábil”.",
-  "an4.188:5.1": "E então Upaka, filho de Maṇḍikā, aprovou e concordou com o que o Buda disse. Levantou-se do seu assento, fez uma buda e respeitosamente rodeou o Buddha, mantendo-o à sua direita. Depois foi ter com o Rei Ajātasattu de Magadha, filho da princesa de Videha. Contou ao rei tudo o que tinham discutido.",
+  "an4.188:5.1": "Então Upaka, filho de Maṇḍikā, aprovou e concordou com as palavras do Buda. Ele se levantou, fez uma reverência e circulou respeitosamente ao redor do Buda, mantendo-o à sua direita. Em seguida, dirigiu-se ao rei Ajātasattu de Magadha, filho da princesa de Videha, e relatou ao rei tudo o que havia sido discutido. ",
   "an4.188:5.2": "Mas Ajātasattu ficou zangado e aborrecido, e disse a Upaka,",
   "an4.188:5.3": "“Como é rude o rapaz do saleiro! Como é escandaloso e insolente da sua parte imaginar que pode atacar o Abençoado, o perfeito, o Buda totalmente desperto!",
   "an4.188:5.4": "Vá-se embora, Upaka, vá-se embora! Não me deixe voltar a vê-lo”."
