Translations by gnlaera to translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json

--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -1,4 +1,5 @@
 {
   "an4.1:0.1": "Aṅguttara Nikāya 4.1 ",
-  "an4.1:1.1": "Assim ouvi. "
+  "an4.1:1.1": "Assim ouvi. ",
+  "an4.1:1.2": "Em certa ocasião o Buda estava no território dos Vajjis, na vila de Bhanda. "
 }
