--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -3,5 +3,6 @@
   "an4.1:1.1": "Assim ouvi. ",
   "an4.1:1.2": "Em certa ocasião o Buda estava no território dos Vajjis, na vila de Bhanda. ",
   "an4.1:1.3": "Lá o Buda se dirigiu aos bhikkhus: ",
-  "an4.1:1.4": "“Bhikkhus!” "
+  "an4.1:1.4": "“Bhikkhus!” ",
+  "an4.1:1.5": "“Venerável Senhor”, eles responderam. "
 }
