--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -5,5 +5,6 @@
   "an4.1:1.3": "Lá o Buda se dirigiu aos bhikkhus: ",
   "an4.1:1.4": "“Bhikkhus!” ",
   "an4.1:1.5": "“Venerável Senhor”, eles responderam. ",
-  "an4.1:1.6": "O Buda então disse: "
+  "an4.1:1.6": "O Buda então disse: ",
+  "an4.1:2.1": "“Bhikkhus, é por não compreender e não despertar para quatro coisas, que tanto vocês quanto eu vagamos e transmigramos por um longo, long tempo. "
 }
