Translations by gnlaera to translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json

--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -8,5 +8,5 @@
   "an4.1:1.6": "O Buda então disse: ",
   "an4.1:2.1": "“Bhikkhus, é por não compreender e não despertar para quatro coisas, que tanto vocês quanto eu vagamos e transmigramos por um longo, long tempo. ",
   "an4.1:2.2": "Quais quatro? ",
-  "an4.1:2.3": "A nobre ética. "
+  "an4.1:2.3": "A nobre ética, "
 }
