--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -10,5 +10,6 @@
   "an4.1:2.2": "Quais quatro? ",
   "an4.1:2.3": "A nobre ética, ",
   "an4.1:2.4": "a nobre imersão da mente ",
-  "an4.1:2.5": "a nobre sabedoria, "
+  "an4.1:2.5": "a nobre sabedoria, ",
+  "an4.1:2.6": "e a nobre libertação. "
 }
