Translations by gnlaera to translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json

--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -11,5 +11,6 @@
   "an4.1:2.3": "A nobre ética, ",
   "an4.1:2.4": "a nobre imersão da mente ",
   "an4.1:2.5": "a nobre sabedoria, ",
-  "an4.1:2.6": "e a nobre libertação. "
+  "an4.1:2.6": "e a nobre libertação. ",
+  "an4.1:2.7": "Com essas nobres qualidades — ética, imersão, sabedoria e libertação — plenamente compreendidas, o desejo por existência cessa, o ciclo de renascimento se encerra, não havendo mais vidas futuras. "
 }
