Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn72_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn72_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn72_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "mn72:13.28": "oder ob er nach dem Tod weder fortbestehe noch nicht fortbestehe, ",
   "mn72:13.29": "sagst du, das sei nicht deine Ansicht. ",
   "mn72:13.31": "Welchen Nachteil siehst du, dass du all diese Überzeugungen vermeidest?“ ",
-  "mn72:14.1": "„Die Überzeugung, das Weltall sei ewig, ist das Dickicht der Ansichten, die Wüste der Ansichten, das Winden der Ansichten, das Ausweichen der Ansichten, die Fessel der Ansichten. Sie ist voller Qual, Bedrängnis und Fieber. Sie führt nicht zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen. ",
+  "mn72:14.1": "„Die Überzeugung, das Weltall sei ewig, ist das Dickicht der Ansichten, die Wüste der Ansichten, das Winden der Ansichten, das Ausweichen der Ansichten, die Fessel der Ansichten. Sie ist voller Leiden, Bedrängnis und Fieber. Sie führt nicht zu Ernüchterung, Schwinden der Leidenschaft, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen. ",
   "mn72:14.2": "Die Überzeugung, es sei zeitlich … ",
   "mn72:14.3": "es sei endlich … ",
   "mn72:14.4": "es sei unendlich … ",
