--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -14,5 +14,6 @@
   "an4.1:2.6": "e a nobre libertação. ",
   "an4.1:2.7": "Com essas nobres qualidades — ética, imersão, sabedoria e libertação — plenamente compreendidas, o desejo por existência cessa, o ciclo de renascimento se encerra, não havendo mais vidas futuras. ",
   "an4.1:3.1": "Assim disse o Buda. ",
-  "an4.1:3.2": "Então, o Buda, o bem-aventurado, o mestre, continuou: "
+  "an4.1:3.2": "Então, o Buda, o bem-aventurado, o mestre, continuou: ",
+  "an4.1:4.1": "“Suprema ética, imersão, sabedoria "
 }
