Translations by gnlaera to translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json

--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -17,5 +17,6 @@
   "an4.1:3.2": "Então, o Buda, o bem-aventurado, o mestre, continuou: ",
   "an4.1:4.1": "“Ética, imersão, sabedoria, ",
   "an4.1:4.2": "e liberação insuperáveis: ",
-  "an4.1:4.3": "para estas coisas ele despertou "
+  "an4.1:4.3": "para estas coisas ele despertou ",
+  "an4.1:4.4": ", o renomado Gotama. "
 }
