--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -20,5 +20,5 @@
   "an4.1:4.3": "para estas coisas ele despertou ",
   "an4.1:4.4": ", o renomado Gotama. ",
   "an4.1:5.1": "Tendo o Buda conhecimento direto de tais coisas ",
-  "an4.1:5.2": "ele explicou este ensinamento para os bhikkhu. "
+  "an4.1:5.2": "ele explicou este ensinamento para os bhikkhus. "
 }
