--- a/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
+++ b/translation/pt/laera-quaresma/sutta/an/an4/an4.1_translation-pt-laera-quaresma.json
@@ -21,5 +21,6 @@
   "an4.1:4.4": ", o renomado Gotama. ",
   "an4.1:5.1": "Tendo o Buda conhecimento direto de tais coisas ",
   "an4.1:5.2": "ele explicou este ensinamento para os bhikkhus. ",
-  "an4.1:5.3": "O mestre dissipou o sofrimento, "
+  "an4.1:5.3": "O mestre dissipou o sofrimento, ",
+  "an4.1:5.4": "vendo com clareza, ele é plenamente saciado e extinto. "
 }
