Translations by neptunao to translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json

--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -1,3 +1,4 @@
 {
-  "an10.219:0.1": "Ангуттара Никая 10.219 "
+  "an10.219:0.1": "Ангуттара Никая 10.219 ",
+  "an10.219:0.2": "21. Рождённое поступками тело "
 }
