Translations by neptunao to translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json

--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -8,5 +8,6 @@
   "an10.219:2.1": "Этот ученик Благородных, монахи, который лишён жажды, лишён недоброжелательности, не имеет замешательства, бдительный, постоянно осознанный, пребывает, наполняя первую сторону света умом, насыщенным доброжелательностью, равно как и вторую сторону, третью сторону, и четвёртую сторону. Так, вверху, внизу, вокруг и всюду, как ко всем, так и к самому себе, он наполняет весь мир умом, наполненным доброжелательностью – обильным, обширным, неизмеримым, не имеющим враждебности и недоброжелательности. ",
   "an10.219:3.1": "Он понимает так: ",
   "an10.219:3.2": "«Прежде мой ум был ограничен и неразвит, но теперь он безграничен и развит. Здесь не остаётся и не наличествует измеримой каммы». ",
-  "an10.219:4.1": "Как вы думаете, монахи, "
+  "an10.219:4.1": "Как вы думаете, монахи, ",
+  "an10.219:4.2": "если бы малыш развивал освобождение ума доброжелательностью с самого детства, смог бы он совершить плохой поступок?» "
 }
