Translations by neptunao to translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json

--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -18,5 +18,6 @@
   "an10.219:6.2": "Мужчина или женщина не смогут забрать с собой это тело, когда придёт пора уходить. ",
   "an10.219:6.3": "У смертных ум является их сердцевиной. ",
   "an10.219:6.4": "Ученик Благородных понимает: ",
-  "an10.219:6.5": "«Какой бы плохой поступок я ни сделал в прошлом этим рождённым поступками телом, всё это будет пережито здесь. "
+  "an10.219:6.5": "«Какой бы плохой поступок я ни сделал в прошлом этим рождённым поступками телом, всё это будет пережито здесь. ",
+  "an10.219:6.6": "Оно не последует дальше». "
 }
