Translations by neptunao to translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json

--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -20,5 +20,6 @@
   "an10.219:6.4": "Ученик Благородных понимает: ",
   "an10.219:6.5": "«Какой бы плохой поступок я ни сделал в прошлом этим рождённым поступками телом, всё это будет пережито здесь. ",
   "an10.219:6.6": "Оно не последует дальше». ",
-  "an10.219:6.7": "Когда освобождение ума доброжелательностью было развито таким образом, то оно ведёт мудрого монаха к не-возвращению, если он не пробьётся к дальнейшему освобождению. "
+  "an10.219:6.7": "Когда освобождение ума доброжелательностью было развито таким образом, то оно ведёт мудрого монаха к не-возвращению, если он не пробьётся к дальнейшему освобождению. ",
+  "an10.219:7.1": "Этот ученик Благородных, монахи, который лишён жажды, лишён недоброжелательности, не имеет замешательства, бдительный, постоянно осознанный, пребывает, наполняя первую сторону света умом, наполненным состраданием… "
 }
